IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.af_ZA.po
+++ b/languages/lazaruside.af_ZA.po
@@ -679,7 +679,7 @@ msgid "Syncronized Cells"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+msgid "Selected text"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
