--- a/languages/lazaruside.pt_BR.po
+++ b/languages/lazaruside.pt_BR.po
@@ -681,7 +681,9 @@ msgid "Syncronized Cells"
 msgstr "Células Sincronizadas"
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+#, fuzzy
+#| msgid "Text block"
+msgid "Selected text"
 msgstr "Bloco texto"
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
