--- a/languages/lazaruside.ar.po
+++ b/languages/lazaruside.ar.po
@@ -685,7 +685,7 @@ msgid "Syncronized Cells"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+msgid "Selected text"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
