--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -689,7 +689,9 @@ msgid "Syncronized Cells"
 msgstr "תאים מתוזמנים"
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+#, fuzzy
+#| msgid "Text block"
+msgid "Selected text"
 msgstr "בלוק של טקסט"
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
