--- a/languages/lazaruside.id.po
+++ b/languages/lazaruside.id.po
@@ -677,7 +677,7 @@ msgid "Syncronized Cells"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+msgid "Selected text"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
