--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -681,7 +681,9 @@ msgid "Syncronized Cells"
 msgstr "同期されたセル"
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+#, fuzzy
+#| msgid "Text block"
+msgid "Selected text"
 msgstr "テキストブロック"
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
