--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -683,7 +683,7 @@ msgid "Syncronized Cells"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrtextblock
-msgid "Text block"
+msgid "Selected text"
 msgstr ""
 
 #: lazarusidestrconsts.dlgaddhiattrunknownbreakpoint
