--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -5,7 +5,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2024-10-30 01:47+0300\n"
+"PO-Revision-Date: 2024-11-06 15:03+0300\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "X-Poedit-Bookmarks: -1,-1,-1,-1,-1,-1,-1,3325,-1,-1\n"
@@ -15266,6 +15266,10 @@ msgstr "Показывать иерархию каталогов"
 #: lazarusidestrconsts.lispeshowmissingfiles
 msgid "Show Missing Files"
 msgstr "Показать отсутствующие файлы"
+
+#: lazarusidestrconsts.lispeshowpropspanel
+msgid "Show properties panel"
+msgstr "Показывать панель свойств"
 
 #: lazarusidestrconsts.lispesortfiles
 msgid "Sort Files Permanently"
