IconFinder: regenerated translations and updated Russian translation

--- a/components/iconfinder/languages/iconfinderstrconsts.ru.po
+++ b/components/iconfinder/languages/iconfinderstrconsts.ru.po
@@ -88,7 +88,7 @@ msgstr "Скрыть все"
 #: iconfinderstrconsts.rsiconviewer_iconcountinfo
 #, object-pascal-format
 msgid "%0:d icons (out of %1:d)"
-msgstr ""
+msgstr "Всего значков: %0:d (из %1:d)"
 
 #: iconfinderstrconsts.rsiconviewer_keywordslbl
 msgid "Keywords:"
