--- a/components/fppkg/languages/fppkg_const.fr.po
+++ b/components/fppkg/languages/fppkg_const.fr.po
@@ -1,36 +1,34 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: 2015-04-16 07:54+0100\n"
-"PO-Revision-Date: 2019-02-07 09:39+0100\n"
+"PO-Revision-Date: 2024-11-17 18:35+0100\n"
 "Last-Translator: h.mira@free.fr\n"
 "Language-Team: http://lazarus.developpez.com/\n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"X-Generator: Poedit 2.2.1\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: fppkg_const.lisfppkgbuildmethodboth
 msgid "Both"
-msgstr ""
+msgstr "Les deux"
 
 #: fppkg_const.lisfppkgbuildmethodfpmake
-#, fuzzy
 msgctxt "fppkg_const.lisfppkgbuildmethodfpmake"
 msgid "FPMake"
 msgstr "FPMake"
 
 #: fppkg_const.lisfppkgbuildmethodlazarus
 msgid "Lazbuild"
-msgstr ""
+msgstr "Lazbuild"
 
 #: fppkg_const.lisfppkgpckoptsbuildmethod
 msgid "Supported build methods"
-msgstr ""
+msgstr "Méthodes de construction prises en charge"
 
 #: fppkg_const.lisfppkgpckoptstitle
-#, fuzzy
 msgctxt "fppkg_const.lisfppkgpckoptstitle"
 msgid "Fppkg"
 msgstr "Fppkg"
@@ -90,7 +88,7 @@ msgstr "Compilation"
 
 #: fppkg_const.rsfppkgoptions
 msgid "fppkg options"
-msgstr "Options de fppkg"
+msgstr "options de fppkg"
 
 #: fppkg_const.rsfppkgsfailedresultds
 #, object-pascal-format
@@ -148,67 +146,67 @@ msgstr "Montrer le gestionnaire de paquets Fppkg"
 
 #: fppkg_const.sactarchivepackages
 msgid "create archive(s) for package(s)"
-msgstr ""
+msgstr "créer des archives pour le(s) paquet(s)"
 
 #: fppkg_const.sactbuildpackages
 msgid "build package(s)"
-msgstr ""
+msgstr "construire le(s) paquet(s)"
 
 #: fppkg_const.sactcleanpackages
 msgid "clean package(s)"
-msgstr ""
+msgstr "nettoyer les paquets"
 
 #: fppkg_const.sactcompilepackages
 msgid "compile packages"
-msgstr ""
+msgstr "compiler les paquets"
 
 #: fppkg_const.sactdownloadpackages
 msgid "download packages"
-msgstr ""
+msgstr "Télécharger les paquets"
 
 #: fppkg_const.sactfixbroken
 msgid "fix broken packages"
-msgstr ""
+msgstr "réparer les paquets défectueux"
 
 #: fppkg_const.sactinitializefppkg
 msgid "initialize fppkg"
-msgstr ""
+msgstr "initialiser fppkg"
 
 #: fppkg_const.sactinstallpackages
 msgid "install package(s)"
-msgstr ""
+msgstr "installer le(s) paquet(s)"
 
 #: fppkg_const.sactuninstpackages
 msgid "uninstall package(s)"
-msgstr ""
+msgstr "désinstaller le(s) paquet(s)"
 
 #: fppkg_const.sactupdate
 msgid "update repository"
-msgstr ""
+msgstr "mettre à jour le dépôt"
 
 #: fppkg_const.sauthor
 msgid "Author"
-msgstr ""
+msgstr "Auteur"
 
 #: fppkg_const.savailable
 msgid "Available"
-msgstr ""
+msgstr "Disponible"
 
 #: fppkg_const.scategory
 msgid "Category"
-msgstr ""
+msgstr "Catégorie"
 
 #: fppkg_const.scpu
 msgid "CPU"
-msgstr ""
+msgstr "Processeur"
 
 #: fppkg_const.sdownload
 msgid "Download"
-msgstr ""
+msgstr "Télécharger"
 
 #: fppkg_const.semail
 msgid "Email"
-msgstr ""
+msgstr "E-mail"
 
 #: fppkg_const.serractionfailed
 #, object-pascal-format
@@ -217,45 +215,48 @@ msgid ""
 "\n"
 "%s"
 msgstr ""
+"Échec à %s :\n"
+"\n"
+"%s"
 
 #: fppkg_const.sfilename
 msgid "Filename"
-msgstr ""
+msgstr "Nom de fichier"
 
 #: fppkg_const.shomepage
 msgid "Homepage"
-msgstr ""
+msgstr "Page d'accueil"
 
 #: fppkg_const.sinstalled
 msgid "Installed"
-msgstr ""
+msgstr "Installé"
 
 #: fppkg_const.skeywords
 msgid "Keywords"
-msgstr ""
+msgstr "Mots-clés"
 
 #: fppkg_const.slicense
 msgid "License"
-msgstr ""
+msgstr "Licence"
 
 #: fppkg_const.smsgactionsucceeded
 #, object-pascal-format
 msgid "%s succeeded."
-msgstr ""
+msgstr "%s a réussi."
 
 #: fppkg_const.smsgfppkgrunning
 msgid "A prior command is still in progress."
-msgstr ""
+msgstr "Une commande antérieure est toujours en cours."
 
 #: fppkg_const.sos
 msgid "OS"
-msgstr ""
+msgstr "Système d'exploitation"
 
 #: fppkg_const.ssupport
 msgid "Support"
-msgstr ""
+msgstr "Support"
 
 #: fppkg_const.sunknown
 msgid "Unknown"
-msgstr ""
+msgstr "Inconnu"
 
