--- a/components/fpweb/languages/fpwebstrconsts.fr.po
+++ b/components/fpweb/languages/fpwebstrconsts.fr.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Yann Mérignac <yann.merignac@laposte.net>\n"
+"Last-Translator: Vasseur Gilles <gillesvasseur58@gmail.com>\n"
 "Language-Team: http://lazarus.developpez.com/\n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: fr\n"
-"X-Generator: Poedit 3.0\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: fpwebstrconsts.rsapachemodule
 msgid "Apache Module"
@@ -53,11 +53,11 @@ msgstr "Un programme FastCGI (Common Gateway Interface) en Free Pascal utilisant
 
 #: fpwebstrconsts.rsfilemodule
 msgid "File serving Module"
-msgstr ""
+msgstr "Module de service de fichiers"
 
 #: fpwebstrconsts.rsfilemodule2
 msgid "A datamodule to help serving files from the filesystem in WEB (HTTP) applications."
-msgstr ""
+msgstr "Module de données permettant de servir des fichiers à partir du système de fichiers dans des applications WEB (HTTP)."
 
 #: fpwebstrconsts.rshtmlwebmodul
 msgid "HTML Web Module"
@@ -77,7 +77,7 @@ msgstr "Un Serveur HTTP complet en Free Pascal utilisant les modules Web."
 
 #: fpwebstrconsts.rsnomodule
 msgid "Do not create a web module"
-msgstr ""
+msgstr "Ne pas créer de module web"
 
 #: fpwebstrconsts.rswebdataprovi
 msgid "Web DataProvider Module"
@@ -129,7 +129,7 @@ msgstr "Insérez vos définitions de classes et de styles ici"
 
 #: fpwebstrconsts.sdefaultrouteservesfiles
 msgid "Serve files from default location"
-msgstr ""
+msgstr "Servir les fichiers à partir de l'emplacement par défaut"
 
 #: fpwebstrconsts.sdocumentroot
 msgid "&Directory"
@@ -141,7 +141,7 @@ msgstr "Entrez votre texte..."
 
 #: fpwebstrconsts.sfileserving
 msgid "File serving"
-msgstr ""
+msgstr "Service des fichiers"
 
 #: fpwebstrconsts.shtmlautor
 msgid "Html &author - <meta name=\"author\">"
@@ -506,7 +506,7 @@ msgstr "Nouvelle application HTTP"
 
 #: fpwebstrconsts.snofiles
 msgid "Do not serve files"
-msgstr ""
+msgstr "Ne pas servir les fichiers"
 
 #: fpwebstrconsts.sregisterfiles
 msgid "&Register location to serve files from"
@@ -522,7 +522,7 @@ msgstr "Enregistrer le module Web"
 
 #: fpwebstrconsts.sstandardmodule
 msgid "Web module to create:"
-msgstr ""
+msgstr "Module web à créer"
 
 #: fpwebstrconsts.susethreads
 msgid "Use &threads to serve requests in"
