--- a/components/lazreport/source/addons/addfunction/languages/lr_add_function_const.fr.po
+++ b/components/lazreport/source/addons/addfunction/languages/lr_add_function_const.fr.po
@@ -1,16 +1,16 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Philippe BOUCAULT <philbouc@users.sourceforge.net>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7.5\n"
-"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 "Language: fr\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
+"X-Generator: Poedit 3.5\n"
 
 #: lr_add_function_const.sdatecategory
 msgid "Date"
@@ -190,7 +190,7 @@ msgstr "VALIDDATE(<String>)/Renvoie Vrai si la chaîne de caractères <String> e
 
 #: lr_add_function_const.sdescriptionvalidfloat
 msgid "VALIDFLOAT(<String>)/Returns True if <String> is valid float value."
-msgstr "VALIDFLOAT(<String>)/Renvoie Vrai si la chaîne de caractères <String> est une valeur réelle correcte"
+msgstr "VALIDFLOAT(<String>)/Renvoie Vrai si la chaîne de caractères <String> est une valeur réelle correcte."
 
 #: lr_add_function_const.sdescriptionvalidint
 msgid "VALIDINT(<String>)/Returns True if <String> is valid integer value."
