--- a/components/sqldb/languages/sqldbstrconst.fr.po
+++ b/components/sqldb/languages/sqldbstrconst.fr.po
@@ -1,19 +1,17 @@
 msgid ""
 msgstr ""
-"Last-Translator: Philippe BOUCAULT <philbouc@users.sourceforge.net>\n"
-"PO-Revision-Date: 2021-11-25 15:52+0100\n"
-"Language-Team: Vasseur Gilles <gillesvasseur58@gmail.com>\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Project-Id-Version: sqldb\n"
 "POT-Creation-Date: \n"
-"MIME-Version: 1.0\n"
+"PO-Revision-Date: 2024-11-17 19:01+0100\n"
+"Last-Translator: Philippe BOUCAULT <philbouc@users.sourceforge.net>\n"
+"Language-Team: Vasseur Gilles <gillesvasseur58@gmail.com>\n"
 "Language: fr\n"
-"X-Generator: Poedit 3.0\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: sqldbstrconst.lrsgeneratesqlstatements
-#, fuzzy
-#| msgid "Edit/Generate SQL statements"
 msgid "Edit/Generate SQL Statements"
 msgstr "Modifier/Générer des instructions SQL"
 
@@ -28,7 +26,7 @@ msgstr "Vous devez sélectionner les champs à mettre à jour et les champs clé
 
 #: sqldbstrconst.screatestringconstant
 msgid "Create string constant"
-msgstr ""
+msgstr "Créer une constante de type chaîne de caractères"
 
 #: sqldbstrconst.seditsql
 msgid "Edit SQL ..."
@@ -109,16 +107,16 @@ msgstr "Enregistrer du code SQL..."
 #: sqldbstrconst.ssqlbrackets
 msgctxt "sqldbstrconst.ssqlbrackets"
 msgid "Brackets"
-msgstr ""
+msgstr "Parenthèses"
 
 #: sqldbstrconst.ssqldelimitersforfieldtablenames
 msgctxt "sqldbstrconst.ssqldelimitersforfieldtablenames"
 msgid "Delimiters for field/table names"
-msgstr ""
+msgstr "Délimiteurs pour les noms de champs/tables"
 
 #: sqldbstrconst.ssqledit
 msgid "Edit SQL Script ..."
-msgstr ""
+msgstr "Modifier le script SQL ..."
 
 #: sqldbstrconst.ssqlerror
 msgid "Probable SQL error"
@@ -127,21 +125,21 @@ msgstr "Erreur SQL probable"
 #: sqldbstrconst.ssqlfullyqualifiedfields
 msgctxt "sqldbstrconst.ssqlfullyqualifiedfields"
 msgid "Fully qualified fields"
-msgstr ""
+msgstr "Champs entièrement qualifiés"
 
 #: sqldbstrconst.ssqlgenerated
 msgid "SQL statements successfully generated."
-msgstr ""
+msgstr "Les instructions SQL ont été générées avec succès."
 
 #: sqldbstrconst.ssqlgeneratesql
 msgctxt "sqldbstrconst.ssqlgeneratesql"
 msgid "Generate SQL"
-msgstr ""
+msgstr "Générer des instructions SQL"
 
 #: sqldbstrconst.ssqlindent
 msgctxt "sqldbstrconst.ssqlindent"
 msgid "Indent"
-msgstr ""
+msgstr "Indenter"
 
 #: sqldbstrconst.ssqlite3databases
 msgid "SQLite3 databases"
@@ -150,21 +148,21 @@ msgstr "Bases de données SQLite3"
 #: sqldbstrconst.ssqlkeyfields
 msgctxt "sqldbstrconst.ssqlkeyfields"
 msgid "Key fields"
-msgstr ""
+msgstr "Champs clés"
 
 #: sqldbstrconst.ssqllinelength
 msgctxt "sqldbstrconst.ssqllinelength"
 msgid "Line length"
-msgstr ""
+msgstr "Longueur de la ligne"
 
 #: sqldbstrconst.ssqlnosqlgenerated
 msgctxt "sqldbstrconst.ssqlnosqlgenerated"
 msgid "No SQL statements were generated. Do you really want to close?"
-msgstr ""
+msgstr "Aucune instruction SQL n'a été générée. Voulez-vous vraiment fermer ?"
 
 #: sqldbstrconst.ssqlnotable
 msgid "No table is selected for generation of SQL statements."
-msgstr ""
+msgstr "Aucune table n'est sélectionnée pour la génération d'instructions SQL."
 
 #: sqldbstrconst.ssqlok
 msgid "Quick SQL check OK"
@@ -173,12 +171,12 @@ msgstr "Vérification SQL rapide OK"
 #: sqldbstrconst.ssqlonefieldperline
 msgctxt "sqldbstrconst.ssqlonefieldperline"
 msgid "One field per line"
-msgstr ""
+msgstr "Un champ par ligne"
 
 #: sqldbstrconst.ssqlquotechar
 msgctxt "sqldbstrconst.ssqlquotechar"
 msgid "Quote character"
-msgstr ""
+msgstr "Caractère de citation"
 
 #: sqldbstrconst.ssqlscript
 msgid "SQL Script file"
@@ -191,22 +189,21 @@ msgstr "Créer un nouveau fichier script SQL"
 #: sqldbstrconst.ssqlselectupdateinsertfields
 msgctxt "sqldbstrconst.ssqlselectupdateinsertfields"
 msgid "\"Select\"/\"Update\"/\"Insert\" fields"
-msgstr ""
+msgstr "Champs \"Select\"/\"Update\"/\"Insert\""
 
 #: sqldbstrconst.ssqlshowsystemtables
 msgctxt "sqldbstrconst.ssqlshowsystemtables"
 msgid "Show system tables"
-msgstr ""
+msgstr "Afficher les tables du système"
 
 #: sqldbstrconst.ssqlsource
 msgid "Insert your SQL statements here"
 msgstr "Insérez vos instructions SQL ici"
 
 #: sqldbstrconst.ssqlstringspropertyeditordlgtitle
-#, object-pascal-format, fuzzy
-#| msgid "Editing %s"
+#, object-pascal-format
 msgid "Statement Editor (%s)"
-msgstr "Édition de %s"
+msgstr "Éditeur de déclarations (%s)"
 
 #: sqldbstrconst.ssqlsyntaxerror
 #, object-pascal-format
@@ -224,15 +221,15 @@ msgstr "Code SQL"
 #: sqldbstrconst.ssqltable
 msgctxt "sqldbstrconst.ssqltable"
 msgid "Table"
-msgstr ""
+msgstr "Table"
 
 #: sqldbstrconst.ssqltablesandfields
 msgctxt "sqldbstrconst.ssqltablesandfields"
 msgid "Tables and Fields"
-msgstr ""
+msgstr "Tables et champs"
 
 #: sqldbstrconst.ssqluppercasekeywords
 msgctxt "sqldbstrconst.ssqluppercasekeywords"
 msgid "Uppercase keywords"
-msgstr ""
+msgstr "Mots clés en majuscules"
 
